# hja_ealstm

./: README.md  pyproject.toml
data/meteorology/: openmeteo_hja_daily.parquet
data/streamflow/: HF004_daily_streamflow_entity2.parquet
doc/: progress_summary.md
models/: lstm_best_model.pt  x_mean.npy  x_std.npy  y_mean.npy  y_std.npy
results/: y_pred.npy  y_true.npy
src/hja_ealstm/data/: download_openmeteo_weather.py  download_streamflow.py  generate_lstm_training_data.py  prepare_lstm_sequences.py
src/hja_ealstm/model/: train_lstm_model.py  train_lstm_normalized_decay.py
