[project]
name = "hja-ealstm"
version = "0.1.0"
description = ""
authors = [
    {name = "elpbatista",email = "elpbatista@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch (>=2.7.1,<3.0.0)",
    "numpy (>=2.3.1,<3.0.0)",
    "pandas (>=2.3.0,<3.0.0)",
    "xarray (>=2025.7.0,<2026.0.0)",
    "scikit-learn (>=1.7.0,<2.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "rasterio (>=1.4.3,<2.0.0)",
    "geopandas (>=1.1.1,<2.0.0)",
    "netcdf4 (>=1.7.2,<2.0.0)",
    "pytorch-lightning (>=2.5.2,<3.0.0)",
    "tqdm (>=4.67.1,<5.0.0)"
]

[tool.poetry]
packages = [{include = "hja_ealstm", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
